# agentic

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  BAZEL.md  BUILD.bazel  CLAUDE.md  CLI-IMPROVEMENTS.md  LICENSE  MODULE.bazel  WORKSPACE  deps.bzl  docker-compose.yaml  go.mod  go.sum  makefile  prometheus.yml  readme.md
.github/workflows/: bazel.yml  go.yml
cmd/: BUILD.bazel  main.go  main_test.go
cmd/agentic/: main.go
cmd/goap-demo/: main.go
cmd/prompts/: implement.prompt  plan-review.prompt  planner.prompt
cmd/reasoning-agent/: BUILD.bazel  main.go
docs/: lsp-insertion-reality.md  lsp-insertion-walkthrough.md
examples/: andon.in  r-tree.in
grafana/provisioning/datasources/: datasource.yml
internal/: BUILD.bazel  utils.go
internal/commands/: config.go  doctor.go  estimate.go  generate.go  validate.go
internal/commands/prompts/: planner.prompt
internal/config/: config.go
internal/estimation/: estimation.go
internal/goap/: BUILD.bazel  README.md  action.go  executor.go  executor_test.go  goal.go  goap_test.go  llm_refiner.go  orchestrator.go  persistence.go  persistence_test.go  planner.go  refinement.go  refinement_test.go  worldstate.go
internal/goap/actions/: BUILD.bazel  actions.go  api_actions.go  build_actions.go  builder.go  edit_actions.go  git_actions.go  granular_edits.go  lsp_edits.go  resilience_actions.go  review_actions.go  template_actions.go  test_actions.go  validation_actions.go
internal/goap/templates/: BUILD.bazel  templates.go
internal/llm/: BUILD.bazel  ai00.go  bedrock.go  bedrock_test.go  claude.go  llm.go  openai.go  vertexai.go
internal/o11y/: BUILD.bazel  lib.go
internal/progress/: progress.go
internal/validation/: validation.go
tickets/: rpm-host.in
