load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix upside-down-research.com/oss/agentic
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
