load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "llm",
    srcs = [
        "ai00.go",
        "claude.go",
        "llm.go",
        "openai.go",
        "vertexai.go",
    ],
    importpath = "upside-down-research.com/oss/agentic/internal/llm",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/o11y",
        "@com_github_charmbracelet_log//:log",
    ],
)
