load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "o11y",
    srcs = ["lib.go"],
    importpath = "upside-down-research.com/oss/agentic/internal/o11y",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_log//:log",
        "@com_github_influxdata_influxdb_client_go_v2//:influxdb-client-go",
        "@com_github_influxdata_influxdb_client_go_v2//api",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/push",
    ],
)
